src/test/ui/suggestions/unicode-confusable-typo.stderr
error[E0425]: cannot find value `Rust` in this scope
  --> $DIR/unicode-confusable-typo.rs:7:13
   |
LL | struct â„ð“Šð“ˆð“‰;
   | ------------ similarly named unit struct `â„ð“Šð“ˆð“‰` defined here
...
LL |     let Ã¼ = Rust;
   |             ^^^^ help: a unit struct with a similar name exists: `â„ð“Šð“ˆð“‰`

error[E0425]: cannot find value `u` in this scope
  --> $DIR/unicode-confusable-typo.rs:9:13
   |
LL |     let _ = u;
   |             ^ help: a local variable with a similar name exists: `Ã¼`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
